packages/macleod/macleod-0.2.8.tar.gz/macleod-0.2.8/macleod/parsing/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> starter
Rule 1     starter -> COMMENT ontology
Rule 2     starter -> ontology
Rule 3     ontology -> LPAREN START URI statement RPAREN
Rule 4     ontology -> LPAREN START statement RPAREN
Rule 5     ontology -> statement
Rule 6     title -> LPAREN TITLE NONLOGICAL RPAREN
Rule 7     title -> LPAREN TITLE URI RPAREN
Rule 8     ontology -> LPAREN START error
Rule 9     ontology -> LPAREN START URI error
Rule 10    restriction -> LPAREN RESTRICT NONLOGICAL LPAREN START statement RPAREN RPAREN
Rule 11    module -> LPAREN TITLE NONLOGICAL LPAREN START statement RPAREN RPAREN
Rule 12    statement -> axiom statement
Rule 13    statement -> import statement
Rule 14    statement -> comment statement
Rule 15    statement -> module statement
Rule 16    statement -> const statement
Rule 17    statement -> title statement
Rule 18    statement -> restriction statement
Rule 19    statement -> axiom
Rule 20    statement -> import
Rule 21    statement -> comment
Rule 22    statement -> module
Rule 23    statement -> const
Rule 24    statement -> restriction
Rule 25    const -> LPAREN SET LPAREN NONLOGICAL NAME_STRING RPAREN RPAREN
Rule 26    inline -> LPAREN CLCOMMENT QUOTED_STRING
Rule 27    comment -> LPAREN CLCOMMENT QUOTED_STRING RPAREN
Rule 28    comment -> LPAREN CLCOMMENT error RPAREN
Rule 29    import -> LPAREN IMPORT URI RPAREN
Rule 30    import -> LPAREN IMPORT error
Rule 31    axiom -> commented_axiom
Rule 32    axiom -> negation
Rule 33    axiom -> universal
Rule 34    axiom -> existential
Rule 35    axiom -> conjunction
Rule 36    axiom -> disjunction
Rule 37    axiom -> implication
Rule 38    axiom -> biconditional
Rule 39    axiom -> predicate
Rule 40    axiom -> commented_predicate
Rule 41    base_axiom -> negation
Rule 42    base_axiom -> universal
Rule 43    base_axiom -> existential
Rule 44    base_axiom -> conjunction
Rule 45    base_axiom -> disjunction
Rule 46    base_axiom -> implication
Rule 47    base_axiom -> biconditional
Rule 48    base_axiom -> predicate
Rule 49    commented_axiom -> inline base_axiom RPAREN
Rule 50    negation -> LPAREN NOT axiom RPAREN
Rule 51    conjunction -> LPAREN AND axiom_list RPAREN
Rule 52    conjunction -> LPAREN AND error
Rule 53    disjunction -> LPAREN OR axiom_list RPAREN
Rule 54    disjunction -> LPAREN OR error
Rule 55    axiom_list -> axiom axiom_list
Rule 56    axiom_list -> axiom
Rule 57    implication -> LPAREN IF axiom axiom RPAREN
Rule 58    implication -> LPAREN IF error
Rule 59    implication -> LPAREN IF axiom error
Rule 60    biconditional -> LPAREN IFF axiom axiom RPAREN
Rule 61    biconditional -> LPAREN IFF error
Rule 62    biconditional -> LPAREN IFF axiom error
Rule 63    existential -> LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
Rule 64    existential -> LPAREN EXISTS LPAREN error
Rule 65    existential -> LPAREN EXISTS LPAREN nonlogicals RPAREN error
Rule 66    universal -> LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
Rule 67    universal -> LPAREN FORALL LPAREN error
Rule 68    universal -> LPAREN FORALL LPAREN nonlogicals RPAREN error
Rule 69    commented_predicate -> LPAREN LPAREN CLCOMMENT QUOTED_STRING NONLOGICAL RPAREN parameter RPAREN
Rule 70    commented_predicate -> LPAREN LPAREN CLCOMMENT QUOTED_STRING NAME_STRING RPAREN parameter RPAREN
Rule 71    predicate -> LPAREN NONLOGICAL parameter RPAREN
Rule 72    predicate -> LPAREN NAME_STRING parameter RPAREN
Rule 73    predicate -> LPAREN SET parameter RPAREN
Rule 74    predicate -> LPAREN SET LPAREN NONLOGICAL NONLOGICAL RPAREN RPAREN
Rule 75    predicate -> LPAREN NONLOGICAL error RPAREN
Rule 76    parameter -> function parameter
Rule 77    parameter -> nonlogicals parameter
Rule 78    parameter -> function
Rule 79    parameter -> nonlogicals
Rule 80    function -> LPAREN NONLOGICAL parameter RPAREN
Rule 81    function -> LPAREN NONLOGICAL error RPAREN
Rule 82    nonlogicals -> NONLOGICAL nonlogicals
Rule 83    nonlogicals -> NONLOGICAL

Terminals, with rules where they appear

AND                  : 51 52
CLCOMMENT            : 26 27 28 69 70
COMMENT              : 1
EXISTS               : 63 64 65
FORALL               : 66 67 68
IF                   : 57 58 59
IFF                  : 60 61 62
IMPORT               : 29 30
LPAREN               : 3 4 6 7 8 9 10 10 11 11 25 25 26 27 28 29 30 50 51 52 53 54 57 58 59 60 61 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 72 73 74 74 75 80 81
NAME_STRING          : 25 70 72
NONLOGICAL           : 6 10 11 25 69 71 74 74 75 80 81 82 83
NOT                  : 50
OR                   : 53 54
QUOTED_STRING        : 26 27 69 70
RESTRICT             : 10
RPAREN               : 3 4 6 7 10 10 11 11 25 25 27 28 29 49 50 51 53 57 60 63 63 65 66 66 68 69 69 70 70 71 72 73 74 74 75 80 81
SET                  : 25 73 74
START                : 3 4 8 9 10 11
TITLE                : 6 7 11
URI                  : 3 7 9 29
error                : 8 9 28 30 52 54 58 59 61 62 64 65 67 68 75 81

Nonterminals, with rules where they appear

axiom                : 12 19 50 55 56 57 57 59 60 60 62 63 66
axiom_list           : 51 53 55
base_axiom           : 49
biconditional        : 38 47
comment              : 14 21
commented_axiom      : 31
commented_predicate  : 40
conjunction          : 35 44
const                : 16 23
disjunction          : 36 45
existential          : 34 43
function             : 76 78
implication          : 37 46
import               : 13 20
inline               : 49
module               : 15 22
negation             : 32 41
nonlogicals          : 63 65 66 68 77 79 82
ontology             : 1 2
parameter            : 69 70 71 72 73 76 77 80
predicate            : 39 48
restriction          : 18 24
starter              : 0
statement            : 3 4 5 10 11 12 13 14 15 16 17 18
title                : 17
universal            : 33 42

Parsing method: LALR

state 0

    (0) S' -> . starter
    (1) starter -> . COMMENT ontology
    (2) starter -> . ontology
    (3) ontology -> . LPAREN START URI statement RPAREN
    (4) ontology -> . LPAREN START statement RPAREN
    (5) ontology -> . statement
    (8) ontology -> . LPAREN START error
    (9) ontology -> . LPAREN START URI error
    (12) statement -> . axiom statement
    (13) statement -> . import statement
    (14) statement -> . comment statement
    (15) statement -> . module statement
    (16) statement -> . const statement
    (17) statement -> . title statement
    (18) statement -> . restriction statement
    (19) statement -> . axiom
    (20) statement -> . import
    (21) statement -> . comment
    (22) statement -> . module
    (23) statement -> . const
    (24) statement -> . restriction
    (31) axiom -> . commented_axiom
    (32) axiom -> . negation
    (33) axiom -> . universal
    (34) axiom -> . existential
    (35) axiom -> . conjunction
    (36) axiom -> . disjunction
    (37) axiom -> . implication
    (38) axiom -> . biconditional
    (39) axiom -> . predicate
    (40) axiom -> . commented_predicate
    (29) import -> . LPAREN IMPORT URI RPAREN
    (30) import -> . LPAREN IMPORT error
    (27) comment -> . LPAREN CLCOMMENT QUOTED_STRING RPAREN
    (28) comment -> . LPAREN CLCOMMENT error RPAREN
    (11) module -> . LPAREN TITLE NONLOGICAL LPAREN START statement RPAREN RPAREN
    (25) const -> . LPAREN SET LPAREN NONLOGICAL NAME_STRING RPAREN RPAREN
    (6) title -> . LPAREN TITLE NONLOGICAL RPAREN
    (7) title -> . LPAREN TITLE URI RPAREN
    (10) restriction -> . LPAREN RESTRICT NONLOGICAL LPAREN START statement RPAREN RPAREN
    (49) commented_axiom -> . inline base_axiom RPAREN
    (50) negation -> . LPAREN NOT axiom RPAREN
    (66) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (67) universal -> . LPAREN FORALL LPAREN error
    (68) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error
    (63) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (64) existential -> . LPAREN EXISTS LPAREN error
    (65) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (51) conjunction -> . LPAREN AND axiom_list RPAREN
    (52) conjunction -> . LPAREN AND error
    (53) disjunction -> . LPAREN OR axiom_list RPAREN
    (54) disjunction -> . LPAREN OR error
    (57) implication -> . LPAREN IF axiom axiom RPAREN
    (58) implication -> . LPAREN IF error
    (59) implication -> . LPAREN IF axiom error
    (60) biconditional -> . LPAREN IFF axiom axiom RPAREN
    (61) biconditional -> . LPAREN IFF error
    (62) biconditional -> . LPAREN IFF axiom error
    (71) predicate -> . LPAREN NONLOGICAL parameter RPAREN
    (72) predicate -> . LPAREN NAME_STRING parameter RPAREN
    (73) predicate -> . LPAREN SET parameter RPAREN
    (74) predicate -> . LPAREN SET LPAREN NONLOGICAL NONLOGICAL RPAREN RPAREN
    (75) predicate -> . LPAREN NONLOGICAL error RPAREN
    (69) commented_predicate -> . LPAREN LPAREN CLCOMMENT QUOTED_STRING NONLOGICAL RPAREN parameter RPAREN
    (70) commented_predicate -> . LPAREN LPAREN CLCOMMENT QUOTED_STRING NAME_STRING RPAREN parameter RPAREN
    (26) inline -> . LPAREN CLCOMMENT QUOTED_STRING

    COMMENT         shift and go to state 2
    LPAREN          shift and go to state 4

    starter                        shift and go to state 1
    ontology                       shift and go to state 3
    statement                      shift and go to state 5
    axiom                          shift and go to state 6
    import                         shift and go to state 7
    comment                        shift and go to state 8
    module                         shift and go to state 9
    const                          shift and go to state 10
    title                          shift and go to state 11
    restriction                    shift and go to state 12
    commented_axiom                shift and go to state 13
    negation                       shift and go to state 14
    universal                      shift and go to state 15
    existential                    shift and go to state 16
    conjunction                    shift and go to state 17
    disjunction                    shift and go to state 18
    implication                    shift and go to state 19
    biconditional                  shift and go to state 20
    predicate                      shift and go to state 21
    commented_predicate            shift and go to state 22
    inline                         shift and go to state 23

state 1

    (0) S' -> starter .



state 2

    (1) starter -> COMMENT . ontology
    (3) ontology -> . LPAREN START URI statement RPAREN
    (4) ontology -> . LPAREN START statement RPAREN
    (5) ontology -> . statement
    (8) ontology -> . LPAREN START error
    (9) ontology -> . LPAREN START URI error
    (12) statement -> . axiom statement
    (13) statement -> . import statement
    (14) statement -> . comment statement
    (15) statement -> . module statement
    (16) statement -> . const statement
    (17) statement -> . title statement
    (18) statement -> . restriction statement
    (19) statement -> . axiom
    (20) statement -> . import
    (21) statement -> . comment
    (22) statement -> . module
    (23) statement -> . const
    (24) statement -> . restriction
    (31) axiom -> . commented_axiom
    (32) axiom -> . negation
    (33) axiom -> . universal
    (34) axiom -> . existential
    (35) axiom -> . conjunction
    (36) axiom -> . disjunction
    (37) axiom -> . implication
    (38) axiom -> . biconditional
    (39) axiom -> . predicate
    (40) axiom -> . commented_predicate
    (29) import -> . LPAREN IMPORT URI RPAREN
    (30) import -> . LPAREN IMPORT error
    (27) comment -> . LPAREN CLCOMMENT QUOTED_STRING RPAREN
    (28) comment -> . LPAREN CLCOMMENT error RPAREN
    (11) module -> . LPAREN TITLE NONLOGICAL LPAREN START statement RPAREN RPAREN
    (25) const -> . LPAREN SET LPAREN NONLOGICAL NAME_STRING RPAREN RPAREN
    (6) title -> . LPAREN TITLE NONLOGICAL RPAREN
    (7) title -> . LPAREN TITLE URI RPAREN
    (10) restriction -> . LPAREN RESTRICT NONLOGICAL LPAREN START statement RPAREN RPAREN
    (49) commented_axiom -> . inline base_axiom RPAREN
    (50) negation -> . LPAREN NOT axiom RPAREN
    (66) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (67) universal -> . LPAREN FORALL LPAREN error
    (68) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error
    (63) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (64) existential -> . LPAREN EXISTS LPAREN error
    (65) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (51) conjunction -> . LPAREN AND axiom_list RPAREN
    (52) conjunction -> . LPAREN AND error
    (53) disjunction -> . LPAREN OR axiom_list RPAREN
    (54) disjunction -> . LPAREN OR error
    (57) implication -> . LPAREN IF axiom axiom RPAREN
    (58) implication -> . LPAREN IF error
    (59) implication -> . LPAREN IF axiom error
    (60) biconditional -> . LPAREN IFF axiom axiom RPAREN
    (61) biconditional -> . LPAREN IFF error
    (62) biconditional -> . LPAREN IFF axiom error
    (71) predicate -> . LPAREN NONLOGICAL parameter RPAREN
    (72) predicate -> . LPAREN NAME_STRING parameter RPAREN
    (73) predicate -> . LPAREN SET parameter RPAREN
    (74) predicate -> . LPAREN SET LPAREN NONLOGICAL NONLOGICAL RPAREN RPAREN
    (75) predicate -> . LPAREN NONLOGICAL error RPAREN
    (69) commented_predicate -> . LPAREN LPAREN CLCOMMENT QUOTED_STRING NONLOGICAL RPAREN parameter RPAREN
    (70) commented_predicate -> . LPAREN LPAREN CLCOMMENT QUOTED_STRING NAME_STRING RPAREN parameter RPAREN
    (26) inline -> . LPAREN CLCOMMENT QUOTED_STRING

    LPAREN          shift and go to state 4

    ontology                       shift and go to state 24
    statement                      shift and go to state 5
    axiom                          shift and go to state 6
    import                         shift and go to state 7
    comment                        shift and go to state 8
    module                         shift and go to state 9
    const                          shift and go to state 10
    title                          shift and go to state 11
    restriction                    shift and go to state 12
    commented_axiom                shift and go to state 13
    negation                       shift and go to state 14
    universal                      shift and go to state 15
    existential                    shift and go to state 16
    conjunction                    shift and go to state 17
    disjunction                    shift and go to state 18
    implication                    shift and go to state 19
    biconditional                  shift and go to state 20
    predicate                      shift and go to state 21
    commented_predicate            shift and go to state 22
    inline                         shift and go to state 23

state 3

    (2) starter -> ontology .

    $end            reduce using rule 2 (starter -> ontology .)


state 4

    (3) ontology -> LPAREN . START URI statement RPAREN
    (4) ontology -> LPAREN . START statement RPAREN
    (8) ontology -> LPAREN . START error
    (9) ontology -> LPAREN . START URI error
    (29) import -> LPAREN . IMPORT URI RPAREN
    (30) import -> LPAREN . IMPORT error
    (27) comment -> LPAREN . CLCOMMENT QUOTED_STRING RPAREN
    (28) comment -> LPAREN . CLCOMMENT error RPAREN
    (11) module -> LPAREN . TITLE NONLOGICAL LPAREN START statement RPAREN RPAREN
    (25) const -> LPAREN . SET LPAREN NONLOGICAL NAME_STRING RPAREN RPAREN
    (6) title -> LPAREN . TITLE NONLOGICAL RPAREN
    (7) title -> LPAREN . TITLE URI RPAREN
    (10) restriction -> LPAREN . RESTRICT NONLOGICAL LPAREN START statement RPAREN RPAREN
    (50) negation -> LPAREN . NOT axiom RPAREN
    (66) universal -> LPAREN . FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (67) universal -> LPAREN . FORALL LPAREN error
    (68) universal -> LPAREN . FORALL LPAREN nonlogicals RPAREN error
    (63) existential -> LPAREN . EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (64) existential -> LPAREN . EXISTS LPAREN error
    (65) existential -> LPAREN . EXISTS LPAREN nonlogicals RPAREN error
    (51) conjunction -> LPAREN . AND axiom_list RPAREN
    (52) conjunction -> LPAREN . AND error
    (53) disjunction -> LPAREN . OR axiom_list RPAREN
    (54) disjunction -> LPAREN . OR error
    (57) implication -> LPAREN . IF axiom axiom RPAREN
    (58) implication -> LPAREN . IF error
    (59) implication -> LPAREN . IF axiom error
    (60) biconditional -> LPAREN . IFF axiom axiom RPAREN
    (61) biconditional -> LPAREN . IFF error
    (62) biconditional -> LPAREN . IFF axiom error
    (71) predicate -> LPAREN . NONLOGICAL parameter RPAREN
    (72) predicate -> LPAREN . NAME_STRING parameter RPAREN
    (73) predicate -> LPAREN . SET parameter RPAREN
    (74) predicate -> LPAREN . SET LPAREN NONLOGICAL NONLOGICAL RPAREN RPAREN
    (75) predicate -> LPAREN . NONLOGICAL error RPAREN
    (69) commented_predicate -> LPAREN . LPAREN CLCOMMENT QUOTED_STRING NONLOGICAL RPAREN parameter RPAREN
    (70) commented_predicate -> LPAREN . LPAREN CLCOMMENT QUOTED_STRING NAME_STRING RPAREN parameter RPAREN
    (26) inline -> LPAREN . CLCOMMENT QUOTED_STRING

    START           shift and go to state 26
    IMPORT          shift and go to state 27
    CLCOMMENT       shift and go to state 28
    TITLE           shift and go to state 29
    SET             shift and go to state 31
    RESTRICT        shift and go to state 33
    NOT             shift and go to state 34
    FORALL          shift and go to state 35
    EXISTS          shift and go to state 36
    AND             shift and go to state 37
    OR              shift and go to state 38
    IF              shift and go to state 39
    IFF             shift and go to state 40
    NONLOGICAL      shift and go to state 30
    NAME_STRING     shift and go to state 32
    LPAREN          shift and go to state 25


state 5

    (5) ontology -> statement .

    $end            reduce using rule 5 (ontology -> statement .)


state 6

    (12) statement -> axiom . statement
    (19) statement -> axiom .
    (12) statement -> . axiom statement
    (13) statement -> . import statement
    (14) statement -> . comment statement
    (15) statement -> . module statement
    (16) statement -> . const statement
    (17) statement -> . title statement
    (18) statement -> . restriction statement
    (19) statement -> . axiom
    (20) statement -> . import
    (21) statement -> . comment
    (22) statement -> . module
    (23) statement -> . const
    (24) statement -> . restriction
    (31) axiom -> . commented_axiom
    (32) axiom -> . negation
    (33) axiom -> . universal
    (34) axiom -> . existential
    (35) axiom -> . conjunction
    (36) axiom -> . disjunction
    (37) axiom -> . implication
    (38) axiom -> . biconditional
    (39) axiom -> . predicate
    (40) axiom -> . commented_predicate
    (29) import -> . LPAREN IMPORT URI RPAREN
    (30) import -> . LPAREN IMPORT error
    (27) comment -> . LPAREN CLCOMMENT QUOTED_STRING RPAREN
    (28) comment -> . LPAREN CLCOMMENT error RPAREN
    (11) module -> . LPAREN TITLE NONLOGICAL LPAREN START statement RPAREN RPAREN
    (25) const -> . LPAREN SET LPAREN NONLOGICAL NAME_STRING RPAREN RPAREN
    (6) title -> . LPAREN TITLE NONLOGICAL RPAREN
    (7) title -> . LPAREN TITLE URI RPAREN
    (10) restriction -> . LPAREN RESTRICT NONLOGICAL LPAREN START statement RPAREN RPAREN
    (49) commented_axiom -> . inline base_axiom RPAREN
    (50) negation -> . LPAREN NOT axiom RPAREN
    (66) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (67) universal -> . LPAREN FORALL LPAREN error
    (68) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error
    (63) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (64) existential -> . LPAREN EXISTS LPAREN error
    (65) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (51) conjunction -> . LPAREN AND axiom_list RPAREN
    (52) conjunction -> . LPAREN AND error
    (53) disjunction -> . LPAREN OR axiom_list RPAREN
    (54) disjunction -> . LPAREN OR error
    (57) implication -> . LPAREN IF axiom axiom RPAREN
    (58) implication -> . LPAREN IF error
    (59) implication -> . LPAREN IF axiom error
    (60) biconditional -> . LPAREN IFF axiom axiom RPAREN
    (61) biconditional -> . LPAREN IFF error
    (62) biconditional -> . LPAREN IFF axiom error
    (71) predicate -> . LPAREN NONLOGICAL parameter RPAREN
    (72) predicate -> . LPAREN NAME_STRING parameter RPAREN
    (73) predicate -> . LPAREN SET parameter RPAREN
    (74) predicate -> . LPAREN SET LPAREN NONLOGICAL NONLOGICAL RPAREN RPAREN
    (75) predicate -> . LPAREN NONLOGICAL error RPAREN
    (69) commented_predicate -> . LPAREN LPAREN CLCOMMENT QUOTED_STRING NONLOGICAL RPAREN parameter RPAREN
    (70) commented_predicate -> . LPAREN LPAREN CLCOMMENT QUOTED_STRING NAME_STRING RPAREN parameter RPAREN
    (26) inline -> . LPAREN CLCOMMENT QUOTED_STRING

    $end            reduce using rule 19 (statement -> axiom .)
    RPAREN          reduce using rule 19 (statement -> axiom .)
    LPAREN          shift and go to state 42

    axiom                          shift and go to state 6
    statement                      shift and go to state 41
    import                         shift and go to state 7
    comment                        shift and go to state 8
    module                         shift and go to state 9
    const                          shift and go to state 10
    title                          shift and go to state 11
    restriction                    shift and go to state 12
    commented_axiom                shift and go to state 13
    negation                       shift and go to state 14
    universal                      shift and go to state 15
    existential                    shift and go to state 16
    conjunction                    shift and go to state 17
    disjunction                    shift and go to state 18
    implication                    shift and go to state 19
    biconditional                  shift and go to state 20
    predicate                      shift and go to state 21
    commented_predicate            shift and go to state 22
    inline                         shift and go to state 23

state 7

    (13) statement -> import . statement
    (20) statement -> import .
    (12) statement -> . axiom statement
    (13) statement -> . import statement
    (14) statement -> . comment statement
    (15) statement -> . module statement
    (16) statement -> . const statement
    (17) statement -> . title statement
    (18) statement -> . restriction statement
    (19) statement -> . axiom
    (20) statement -> . import
    (21) statement -> . comment
    (22) statement -> . module
    (23) statement -> . const
    (24) statement -> . restriction
    (31) axiom -> . commented_axiom
    (32) axiom -> . negation
    (33) axiom -> . universal
    (34) axiom -> . existential
    (35) axiom -> . conjunction
    (36) axiom -> . disjunction
    (37) axiom -> . implication
    (38) axiom -> . biconditional
    (39) axiom -> . predicate
    (40) axiom -> . commented_predicate
    (29) import -> . LPAREN IMPORT URI RPAREN
    (30) import -> . LPAREN IMPORT error
    (27) comment -> . LPAREN CLCOMMENT QUOTED_STRING RPAREN
    (28) comment -> . LPAREN CLCOMMENT error RPAREN
    (11) module -> . LPAREN TITLE NONLOGICAL LPAREN START statement RPAREN RPAREN
    (25) const -> . LPAREN SET LPAREN NONLOGICAL NAME_STRING RPAREN RPAREN
    (6) title -> . LPAREN TITLE NONLOGICAL RPAREN
    (7) title -> . LPAREN TITLE URI RPAREN
    (10) restriction -> . LPAREN RESTRICT NONLOGICAL LPAREN START statement RPAREN RPAREN
    (49) commented_axiom -> . inline base_axiom RPAREN
    (50) negation -> . LPAREN NOT axiom RPAREN
    (66) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (67) universal -> . LPAREN FORALL LPAREN error
    (68) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error
    (63) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (64) existential -> . LPAREN EXISTS LPAREN error
    (65) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (51) conjunction -> . LPAREN AND axiom_list RPAREN
    (52) conjunction -> . LPAREN AND error
    (53) disjunction -> . LPAREN OR axiom_list RPAREN
    (54) disjunction -> . LPAREN OR error
    (57) implication -> . LPAREN IF axiom axiom RPAREN
    (58) implication -> . LPAREN IF error
    (59) implication -> . LPAREN IF axiom error
    (60) biconditional -> . LPAREN IFF axiom axiom RPAREN
    (61) biconditional -> . LPAREN IFF error
    (62) biconditional -> . LPAREN IFF axiom error
    (71) predicate -> . LPAREN NONLOGICAL parameter RPAREN
    (72) predicate -> . LPAREN NAME_STRING parameter RPAREN
    (73) predicate -> . LPAREN SET parameter RPAREN
    (74) predicate -> . LPAREN SET LPAREN NONLOGICAL NONLOGICAL RPAREN RPAREN
    (75) predicate -> . LPAREN NONLOGICAL error RPAREN
    (69) commented_predicate -> . LPAREN LPAREN CLCOMMENT QUOTED_STRING NONLOGICAL RPAREN parameter RPAREN
    (70) commented_predicate -> . LPAREN LPAREN CLCOMMENT QUOTED_STRING NAME_STRING RPAREN parameter RPAREN
    (26) inline -> . LPAREN CLCOMMENT QUOTED_STRING

    $end            reduce using rule 20 (statement -> import .)
    RPAREN          reduce using rule 20 (statement -> import .)
    LPAREN          shift and go to state 42

    import                         shift and go to state 7
    statement                      shift and go to state 43
    axiom                          shift and go to state 6
    comment                        shift and go to state 8
    module                         shift and go to state 9
    const                          shift and go to state 10
    title                          shift and go to state 11
    restriction                    shift and go to state 12
    commented_axiom                shift and go to state 13
    negation                       shift and go to state 14
    universal                      shift and go to state 15
    existential                    shift and go to state 16
    conjunction                    shift and go to state 17
    disjunction                    shift and go to state 18
    implication                    shift and go to state 19
    biconditional                  shift and go to state 20
    predicate                      shift and go to state 21
    commented_predicate            shift and go to state 22
    inline                         shift and go to state 23

state 8

    (14) statement -> comment . statement
    (21) statement -> comment .
    (12) statement -> . axiom statement
    (13) statement -> . import statement
    (14) statement -> . comment statement
    (15) statement -> . module statement
    (16) statement -> . const statement
    (17) statement -> . title statement
    (18) statement -> . restriction statement
    (19) statement -> . axiom
    (20) statement -> . import
    (21) statement -> . comment
    (22) statement -> . module
    (23) statement -> . const
    (24) statement -> . restriction
    (31) axiom -> . commented_axiom
    (32) axiom -> . negation
    (33) axiom -> . universal
    (34) axiom -> . existential
    (35) axiom -> . conjunction
    (36) axiom -> . disjunction
    (37) axiom -> . implication
    (38) axiom -> . biconditional
    (39) axiom -> . predicate
    (40) axiom -> . commented_predicate
    (29) import -> . LPAREN IMPORT URI RPAREN
    (30) import -> . LPAREN IMPORT error
    (27) comment -> . LPAREN CLCOMMENT QUOTED_STRING RPAREN
    (28) comment -> . LPAREN CLCOMMENT error RPAREN
    (11) module -> . LPAREN TITLE NONLOGICAL LPAREN START statement RPAREN RPAREN
    (25) const -> . LPAREN SET LPAREN NONLOGICAL NAME_STRING RPAREN RPAREN
    (6) title -> . LPAREN TITLE NONLOGICAL RPAREN
    (7) title -> . LPAREN TITLE URI RPAREN
    (10) restriction -> . LPAREN RESTRICT NONLOGICAL LPAREN START statement RPAREN RPAREN
    (49) commented_axiom -> . inline base_axiom RPAREN
    (50) negation -> . LPAREN NOT axiom RPAREN
    (66) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (67) universal -> . LPAREN FORALL LPAREN error
    (68) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error
    (63) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (64) existential -> . LPAREN EXISTS LPAREN error
    (65) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (51) conjunction -> . LPAREN AND axiom_list RPAREN
    (52) conjunction -> . LPAREN AND error
    (53) disjunction -> . LPAREN OR axiom_list RPAREN
    (54) disjunction -> . LPAREN OR error
    (57) implication -> . LPAREN IF axiom axiom RPAREN
    (58) implication -> . LPAREN IF error
    (59) implication -> . LPAREN IF axiom error
    (60) biconditional -> . LPAREN IFF axiom axiom RPAREN
    (61) biconditional -> . LPAREN IFF error
    (62) biconditional -> . LPAREN IFF axiom error
    (71) predicate -> . LPAREN NONLOGICAL parameter RPAREN
    (72) predicate -> . LPAREN NAME_STRING parameter RPAREN
    (73) predicate -> . LPAREN SET parameter RPAREN
    (74) predicate -> . LPAREN SET LPAREN NONLOGICAL NONLOGICAL RPAREN RPAREN
    (75) predicate -> . LPAREN NONLOGICAL error RPAREN
    (69) commented_predicate -> . LPAREN LPAREN CLCOMMENT QUOTED_STRING NONLOGICAL RPAREN parameter RPAREN
    (70) commented_predicate -> . LPAREN LPAREN CLCOMMENT QUOTED_STRING NAME_STRING RPAREN parameter RPAREN
    (26) inline -> . LPAREN CLCOMMENT QUOTED_STRING

    $end            reduce using rule 21 (statement -> comment .)
    RPAREN          reduce using rule 21 (statement -> comment .)
    LPAREN          shift and go to state 42

    comment                        shift and go to state 8
    statement                      shift and go to state 44
    axiom                          shift and go to state 6
    import                         shift and go to state 7
    module                         shift and go to state 9
    const                          shift and go to state 10
    title                          shift and go to state 11
    restriction                    shift and go to state 12
    commented_axiom                shift and go to state 13
    negation                       shift and go to state 14
    universal                      shift and go to state 15
    existential                    shift and go to state 16
    conjunction                    shift and go to state 17
    disjunction                    shift and go to state 18
    implication                    shift and go to state 19
    biconditional                  shift and go to state 20
    predicate                      shift and go to state 21
    commented_predicate            shift and go to state 22
    inline                         shift and go to state 23

state 9

    (15) statement -> module . statement
    (22) statement -> module .
    (12) statement -> . axiom statement
    (13) statement -> . import statement
    (14) statement -> . comment statement
    (15) statement -> . module statement
    (16) statement -> . const statement
    (17) statement -> . title statement
    (18) statement -> . restriction statement
    (19) statement -> . axiom
    (20) statement -> . import
    (21) statement -> . comment
    (22) statement -> . module
    (23) statement -> . const
    (24) statement -> . restriction
    (31) axiom -> . commented_axiom
    (32) axiom -> . negation
    (33) axiom -> . universal
    (34) axiom -> . existential
    (35) axiom -> . conjunction
    (36) axiom -> . disjunction
    (37) axiom -> . implication
    (38) axiom -> . biconditional
    (39) axiom -> . predicate
    (40) axiom -> . commented_predicate
    (29) import -> . LPAREN IMPORT URI RPAREN
    (30) import -> . LPAREN IMPORT error
    (27) comment -> . LPAREN CLCOMMENT QUOTED_STRING RPAREN
    (28) comment -> . LPAREN CLCOMMENT error RPAREN
    (11) module -> . LPAREN TITLE NONLOGICAL LPAREN START statement RPAREN RPAREN
    (25) const -> . LPAREN SET LPAREN NONLOGICAL NAME_STRING RPAREN RPAREN
    (6) title -> . LPAREN TITLE NONLOGICAL RPAREN
    (7) title -> . LPAREN TITLE URI RPAREN
    (10) restriction -> . LPAREN RESTRICT NONLOGICAL LPAREN START statement RPAREN RPAREN
    (49) commented_axiom -> . inline base_axiom RPAREN
    (50) negation -> . LPAREN NOT axiom RPAREN
    (66) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (67) universal -> . LPAREN FORALL LPAREN error
    (68) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error
    (63) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (64) existential -> . LPAREN EXISTS LPAREN error
    (65) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (51) conjunction -> . LPAREN AND axiom_list RPAREN
    (52) conjunction -> . LPAREN AND error
    (53) disjunction -> . LPAREN OR axiom_list RPAREN
    (54) disjunction -> . LPAREN OR error
    (57) implication -> . LPAREN IF axiom axiom RPAREN
    (58) implication -> . LPAREN IF error
    (59) implication -> . LPAREN IF axiom error
